<resources>
    <string name="app_name">ShoppingList</string>
    <string name="empty_view_title_text">No products here …</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="enter_shopping_list_name">Enter shopping list name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="shopping_list_empty">Shopping list name can\'t be empty</string>
    <string name="product_empty">Product name can\'t be empty</string>
    <string name="add_new_shopping_list">Add new shopping list</string>
    <string name="current_shopping_list">Current shopping list</string>
    <string name="archived_shopping_list">Archived shopping list</string>
    <string name="add_new_product">Add new product</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_quantity">Enter quantity</string>
</resources>
