<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/dialog_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleDialogSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_product"
                android:background="@color/colorPrimary"
                android:gravity="start"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_product_name" />

            <EditText
                android:id="@+id/quantityEditText"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_quantity" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlack" />

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>